# vetor

./: .gitignore  Cargo.toml  men.vec
src/: framerate.rs  main.rs  util.rs  window.rs
src/archives/: mod.rs
src/assets/animations/: unnamed.raw.anim
src/assets/figures/: men.raw.fig  unnamed.vfr
src/branch/: circle.rs  line.rs  mod.rs  node.rs  point.rs  vector.rs
src/figure/: edge.rs  mod.rs
src/icons/: iconset.rgi  mod.rs
src/imports/: bin.rs
src/maths/: mod.rs
src/styles/: mod.rs
src/window/: animation.rs  edit.rs  mod.rs  tab.rs
src/window/animation/: frame.rs  mod.rs
src/window/util/: button.rs
