[package]
name = "vetor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
native-dialog = "0.6.3"
raylib = { version = "4.5.0", branch = "4.5.0", git = "https://github.com/Leandro-C-Reis/raylib-rs" }
